Allow multiple threads per line, with different ranges (WIP, another implementation)
- Add concept of diff comment thread groups, which are all of the
  threads at a particular line number.

- The thread group is responsible for breaking up comments into threads
  based on the range of the comment.

- Thread groups are ordered by the updated time of the first comment in
  the group.

- Thread groups are given a key, based on comment range, which is used
  to determine what thread group a new comment should go in (or if it
  needs a new one).

Change-Id: If544e8bb879262de3ce5397e86124837b66ada04

--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread.html
@@ -28,6 +28,10 @@ limitations under the License.
         margin-bottom: 1px;
         white-space: normal;
       }
+      .actions {
+        border-top: 1px dotted #bbb;
+        padding: .7em;
+      }
       #container {
         background-color: #fcfad6;
       }
@@ -50,6 +54,12 @@ limitations under the License.
             on-create-fix-comment="_handleCommentFix"
             on-create-reply-comment="_handleCommentReply"></gr-diff-comment>
       </template>
+      <div class="actions humanActions" hidden$="[[!_showActions]]">
+        <gr-button class="action reply" on-tap="_handleCommentReply">Reply</gr-button>
+        <gr-button class="action quote" on-tap="_handleCommentQuote">Quote</gr-button>
+        <gr-button class="action ack" on-tap="_handleCommentAck">Ack</gr-button>
+        <gr-button class="action done" on-tap="_handleCommentDone">Done</gr-button>
+      </div>
     </div>
     <gr-rest-api-interface id="restAPI"></gr-rest-api-interface>
     <gr-storage id="storage"></gr-storage>
