--- a/polygerrit-ui/app/elements/shared/gr-account-chip/gr-account-chip.html
+++ b/polygerrit-ui/app/elements/shared/gr-account-chip/gr-account-chip.html
@@ -73,7 +73,9 @@ limitations under the License.
       <gr-account-link account="[[account]]"></gr-account-link>
       <gr-button
           id="remove"
-          hidden$="[[!removable]]" hidden
+          hidden$="[[!removable]]"
+          hidden
+          aria-label="Remove"
           class$="remove [[_getBackgroundClass(transparentBackground)]]"
           on-tap="_handleRemoveTap">×</gr-button>
     </div>
