--- a/polygerrit-ui/app/elements/shared/gr-editable-label/gr-editable-label.html
+++ b/polygerrit-ui/app/elements/shared/gr-editable-label/gr-editable-label.html
@@ -23,8 +23,7 @@ limitations under the License.
         display: inline-flex;
       }
       input,
-      label,
-      .container {
+      label {
         width: 100%;
       }
       input {
@@ -45,17 +44,17 @@ limitations under the License.
         text-decoration: underline;
       }
     </style>
-      <input
-          is="iron-input"
-          id="input"
-          hidden$="[[!editing]]"
-          on-keydown="_handleInputKeydown"
-          bind-value="{{_inputText}}">
-      <label
-          hidden$="[[editing]]"
-          class$="[[_computeLabelClass(readOnly, value, placeholder)]]"
-          title$="[[_computeLabel(value, placeholder)]]"
-          on-tap="_open">[[_computeLabel(value, placeholder)]]</label>
+    <input
+        is="iron-input"
+        id="input"
+        hidden$="[[!editing]]"
+        on-keydown="_handleInputKeydown"
+        bind-value="{{_inputText}}">
+    <label
+        hidden$="[[editing]]"
+        class$="[[_computeLabelClass(readOnly, value, placeholder)]]"
+        title$="[[_computeLabel(value, placeholder)]]"
+        on-tap="_open">[[_computeLabel(value, placeholder)]]</label>
   </template>
   <script src="gr-editable-label.js"></script>
 </dom-module>
