--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
@@ -250,11 +250,15 @@ limitations under the License.
     <div class="container" hidden$="{{_loading}}">
       <div class="header">
         <span class="header-title">
-          <gr-change-star id="changeStar"
+          <gr-change-star
+              id="changeStar"
               change="{{_change}}" hidden$="[[!_loggedIn]]"></gr-change-star>
-          <a href$="[[_computeChangePermalink(_change._number)]]">[[_change._number]]</a><!--
-       --><template is="dom-if" if="[[_changeStatus]]">
-            ([[_changeStatus]]<!--
+          <a
+              aria-label$="[[_computeChangePermalinkAriaLabel(_change._number)]]"
+              href$="[[_computeChangePermalink(_change._number)]]">[[_change._number]]</a><!--
+       --><template is="dom-if" if="[[_changeStatus]]"><!--
+         --> (<!--
+         --><span tabindex="0" aria-label$="[[_changeStatus]]">[[_changeStatus]]</span><!--
          --><template
                 is="dom-if"
                 if="[[_computeShowCommitInfo(_changeStatus, _change.current_revision)]]">
@@ -264,10 +268,9 @@ limitations under the License.
                   commit-info="[[_computeMergedCommitInfo(_change.current_revision, _change.revisions)]]"
                   server-config="[[serverConfig]]"></gr-commit-info><!--
          --></template><!--
-       -->)<!--
-     --></template><!--
-       -->:
-          [[_change.subject]]
+         -->)<!--
+       --></template><!--
+       -->: [[_change.subject]]
         </span>
       </div>
       <section class="changeInfo">
@@ -372,12 +375,14 @@ limitations under the License.
               /
               <gr-button link
                   class="download"
+                  tabindex="0"
                   on-tap="_handleDownloadTap">Download</gr-button>
             </span>
             <span class="descriptionContainer">
               /
               <gr-editable-label
                   id="descriptionLabel"
+                  tabindex="0"
                   class="descriptionLabel"
                   value="[[_computePatchSetDescription(_change, _selectedPatchSet)]]"
                   placeholder="[[_computeDescriptionPlaceholder(_descriptionReadOnly)]]"
