Add various aria labels and a11y features to PG
1) Added aria-label to account-dropdown avatar
2) Added aria-label to change-star
3) Added computed aria-label to issue number
4) No action required
5) Added aria-label to remove reviewer button
6) No action required
7) Added aria-label to checkboxes
8) Added computed aria-label to file status marker
9) Added aria-label to file line +- markers
10) Solved by agable@
11) No longer an issue with unrelated changes to comments

Feature: Issue 4279
Change-Id: If735f369bae5d1e867c664a4d55d11664bbc5196

--- a/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
+++ b/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
@@ -130,7 +130,7 @@ limitations under the License.
         background-color: #888;
       }
     </style>
-    <content></content>
+    <content tabindex="0"></content>
   </template>
   <script src="gr-button.js"></script>
 </dom-module>
