Upgrade gr-dropdown with additional capabilities
The shared dropdown component is made more-configurable, so it can be
reused in more contexts.
* The down-arrow is an flag that can be enabled on the dropdown, instead
  of added (and styled) at the use site.
* Items no longer need to be links to new URLs. They can be buttons with
  declared handlers.
* The dropdown trigger can be a link or a button, as configured by the
  link flag.

Change-Id: Ia9db3b66bf30bc56bf2ab4ce1f2292f51ab4754d

--- a/polygerrit-ui/app/elements/core/gr-account-dropdown/gr-account-dropdown.html
+++ b/polygerrit-ui/app/elements/core/gr-account-dropdown/gr-account-dropdown.html
@@ -34,7 +34,10 @@ limitations under the License.
         vertical-align: middle;
       }
     </style>
-    <gr-dropdown items=[[links]] top-content=[[topContent]]
+    <gr-dropdown
+        link
+        items=[[links]]
+        top-content=[[topContent]]
         horizontal-align="right">
         <span hidden$="[[_hasAvatars]]" hidden>[[account.name]]</span>
         <gr-avatar account="[[account]]" hidden$="[[!_hasAvatars]]" hidden
