Wrap resolved checkbox in label tag
Increases the click surface for resolving comments.

Change-Id: Ibce18001426a3c283cd5df13482853a2185c2ab9

--- a/polygerrit-ui/app/elements/diff/gr-diff-comment/gr-diff-comment.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment/gr-diff-comment.html
@@ -241,10 +241,12 @@ limitations under the License.
         <gr-button class="action cancel hideOnPublished"
             on-tap="_handleCancel" hidden>Cancel</gr-button>
         <div class="action resolve hideOnPublished">
-          <input type="checkbox"
-              checked$="[[resolved]]"
-              on-change="_handleToggleResolved">
-          <label>Resolved</label>
+          <label>
+            <input type="checkbox"
+                checked$="[[resolved]]"
+                on-change="_handleToggleResolved">
+            Resolved
+          </label>
         </div>
         <div class="danger">
           <gr-button class="action discard hideOnPublished"
