Re-organize change actions into an array
The gr-change-actions element organizes change actions into a single,
sorted array property for rendering. Formerly, the order was partially
established by keeping the actions in separate arrays and rendering
them in serial loops, whereas, with this change, the rendering and order
is simplified and less redundant.

In particular, the `_computeChangeActionValues` and
`_computeRevisionActionValues` methods are merged into a new
`_computeAllActions` method.

Change-Id: I4ff3d1458fe845e0a5932e4aeb6b91dcbb4c20ee

--- a/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
+++ b/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
@@ -63,25 +63,14 @@ limitations under the License.
       }
     </style>
     <div>
-      <section hidden$="[[_shouldHideActions(actions.*, _additionalActions.*, _loading)]]">
-        <template is="dom-repeat" items="[[_changeActionValues]]" as="action">
+      <section hidden$="[[_shouldHideActions(_allActionValues.*, _loading)]]">
+        <template
+            is="dom-repeat"
+            items="[[_allActionValues]]"
+            as="action">
           <gr-button title$="[[action.title]]"
-              hidden$="[[_computeActionHidden(action.__key, _hiddenChangeActions.*)]]"
+              hidden$="[[_computeActionHidden(action.__key, _hiddenActions.*)]]"
               primary$="[[action.__primary]]"
-              hidden$="[[!action.enabled]]"
-              data-action-key$="[[action.__key]]"
-              data-action-type$="[[action.__type]]"
-              data-label$="[[action.label]]"
-              data-loading-label$="[[_computeLoadingLabel(action.__key)]]"
-              on-tap="_handleActionTap"></gr-button>
-        </template>
-      </section>
-      <section hidden$="[[_shouldHideActions(revisionActions.*, _additionalActions.*, _loading)]]">
-        <template is="dom-repeat" items="[[_revisionActionValues]]" as="action">
-          <gr-button title$="[[action.title]]"
-              hidden$="[[_computeActionHidden(action.__key, _hiddenRevisionActions.*)]]"
-              primary$="[[action.__primary]]"
-              disabled$="[[!action.enabled]]"
               data-action-key$="[[action.__key]]"
               data-action-type$="[[action.__type]]"
               data-label$="[[action.label]]"
