Re-organize change actions into an array
The gr-change-actions element organizes change actions into a single,
sorted array property for rendering. Formerly, the order was partially
established by keeping the actions in separate arrays and rendering
them in serial loops, whereas, with this change, the rendering and order
is simplified and less redundant.

In particular, the `_computeChangeActionValues` and
`_computeRevisionActionValues` methods are merged into a new
`_computeAllActions` method.

Change-Id: I4ff3d1458fe845e0a5932e4aeb6b91dcbb4c20ee

--- a/polygerrit-ui/app/elements/shared/gr-js-api-interface/gr-change-actions-js-api_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-js-api-interface/gr-change-actions-js-api_test.html
@@ -49,6 +49,7 @@ breaking changes to gr-change-actions won’t be noticed.
 
     setup(function() {
       element = fixture('basic');
+      element.change = {};
       var plugin;
       Gerrit.install(function(p) { plugin = p; }, '0.1',
           'http://test.com/plugins/testplugin/static/test.js');
